# color_arrangement

./: README.md  plot_colors.py  profile_my_stuff.py  pyproject.toml
arrange_colors/: color_problem.py  plot_colors.py
