[tool.poetry]
name = "color-arrangement"
version = "0.1.0"
description = ""
authors = ["Edward Carl <55811915+edwardmcarl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.21.2"
sklearn = "^0.0"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
matplotlib = "^3.4.3"
Pillow = "^8.4.0"
scikit-image = "^0.18.3"
einops = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
